Fix #7777 ~ Add overflow for the autocomplete (#7778)
* Fix #7777 ~ Add overflow for the autocomplete

* Remove outline on up/down arrow

* Fix tooltip position + remove tabs

--- a/src/sass/components/composer/composerInputMeta.scss
+++ b/src/sass/components/composer/composerInputMeta.scss
@@ -39,7 +39,7 @@
     }
 }
 
-.composerInputMeta-container .composerInputMeta-overlay-button {z-index: 2}
+.composerInputMeta-container .composerInputMeta-overlay-button {z-index: 2; outline: 0;}
 
 .composerInputMeta-recipients .composerInputMeta-overlay-label {display: none}
 .composerInputMeta-overlay-hidden .composerInputMeta-overlay {
